--- a/spam_model.ipynb
+++ b/spam_model.ipynb
@@ -543,13 +543,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "58c6546d",
    "metadata": {},
    "outputs": [],
    "source": [
     "X = df.drop(columns=['label'])\n",
     "y = df['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2d7c1695",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>message</th>\n",
+       "      <th>length</th>\n",
+       "      <th>punct</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>111</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>29</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>155</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>49</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>61</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5567</th>\n",
+       "      <td>This is the 2nd time we have tried 2 contact u...</td>\n",
+       "      <td>160</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5568</th>\n",
+       "      <td>Will ü b going to esplanade fr home?</td>\n",
+       "      <td>36</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5569</th>\n",
+       "      <td>Pity, * was in mood for that. So...any other s...</td>\n",
+       "      <td>57</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5570</th>\n",
+       "      <td>The guy did some bitching but I acted like i'd...</td>\n",
+       "      <td>125</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5571</th>\n",
+       "      <td>Rofl. Its true to its name</td>\n",
+       "      <td>26</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5169 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                message  length  punct\n",
+       "0     Go until jurong point, crazy.. Available only ...     111      9\n",
+       "1                         Ok lar... Joking wif u oni...      29      6\n",
+       "2     Free entry in 2 a wkly comp to win FA Cup fina...     155      6\n",
+       "3     U dun say so early hor... U c already then say...      49      6\n",
+       "4     Nah I don't think he goes to usf, he lives aro...      61      2\n",
+       "...                                                 ...     ...    ...\n",
+       "5567  This is the 2nd time we have tried 2 contact u...     160      8\n",
+       "5568               Will ü b going to esplanade fr home?      36      1\n",
+       "5569  Pity, * was in mood for that. So...any other s...      57      7\n",
+       "5570  The guy did some bitching but I acted like i'd...     125      1\n",
+       "5571                         Rofl. Its true to its name      26      1\n",
+       "\n",
+       "[5169 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e9221a75",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        ham\n",
+       "1        ham\n",
+       "2       spam\n",
+       "3        ham\n",
+       "4        ham\n",
+       "        ... \n",
+       "5567    spam\n",
+       "5568     ham\n",
+       "5569     ham\n",
+       "5570     ham\n",
+       "5571     ham\n",
+       "Name: label, Length: 5169, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
    ]
   }
  ],
